# cachehit_llm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
cachehitML/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tiktoken.h
cachehitML/include/op/: add.h  embedding.h  layer.h  matmul.h  op_add.h  op_embedding.h  op_encode.h  op_layer.h  op_matmul.h  op_mha.h  op_rmsnorm.h  op_rope.h  op_swiglu.h  swiglu.h
cachehitML/include/sampler/: sampler.h
cachehitML/include/tensor/: tensor.h
cachehitML/src/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  base.cpp  buffer.cpp
cachehitML/src/op/: add.cpp  op_add.cpp  op_emb.cpp  op_layer.cpp  op_matmul.cpp
cachehitML/src/op/backend/: backend_interface.cpp  backend_interface.h
cachehitML/src/op/backend/x86cpu-backend/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h
cachehitML/src/tensor/: tensor.cpp
cmake/: cuda.cmake
script/: llama7b_4bit.py
test/: CMakeLists.txt  main_test.cpp  test.sh  test_alloc.cpp  test_base.cpp
test/test_base/: test_alloc.cpp  test_alloc_cpu.cpp  test_base.cpp  test_buffer.cpp
test/test_op/: test_add.cpp
